# RadarEchoTrails

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  processing.rs  queue.rs
ui/: appwindow.slint
ui/components/: bottom_bar.slint  folder_queue.slint  progress_panel.slint  settings_panel.slint  top_bar.slint
ui/material/ui/icons/: icons.slint
