[package]
name = "frame-trails"
version = "0.1.0"
edition = "2024"
description = "Create motion trails by compositing consecutive image frames with configurable fading."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tga", "hdr", "ico", "pnm"] }
rayon = "1.10"
